# Diplomski-projekt

ceres_mpc/: CMakeLists.txt  package.xml
ceres_mpc/include/ceres_mpc/: mpc_mm_ceres.h
ceres_mpc/src/: ceres_mpc_4.cpp  ceres_mpc_5.cpp  mpc_mm_ceres.cpp  proba_mpc_ceres_razreda.cpp
morus_uav_gazebo/morus_control/: CMakeLists.txt  package.xml
morus_uav_gazebo/morus_control/include/morus_control/: attitude_mpc-vpc_ctl.h  attitude_mpc-vpc_ctl_node.h  attitude_mpc_ctl_ceres.h
morus_uav_gazebo/morus_control/launch/: morus_control_mpc-vpc.launch
morus_uav_gazebo/morus_control/src/: attitude_MMC-VPC_ctl.cpp  attitude_mpc_ctl_ceres.cpp  height_yaw_plus_MMC-VPC_ctl.py  mpc_mm_ceres.cpp
morus_uav_gazebo/morus_control/src/nodes/: attitude_mpc-vpc_ctl_node.cpp  attitude_mpc_ctl_node.cpp
